samples/_failures_safe/1761395968_270f56_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01dff27c.c: In function ‘determinant_matrix’:
./samples/SAFE/__tmp_01dff27c.c:144:31: error: expected ‘)’ at end of input
  144 |     if (mat->rows != mat->cols
      |        ~                      ^
      |                               )
./samples/SAFE/__tmp_01dff27c.c:144:5: error: expected declaration or statement at end of input
  144 |     if (mat->rows != mat->cols
      |     ^~
